RESOLVED FIXED154044
[Mac] Graphical corruption in videos when enabling custom loading path
https://bugs.webkit.org/show_bug.cgi?id=154044
Summary [Mac] Graphical corruption in videos when enabling custom loading path
Jer Noble
Reported 2016-02-09 13:32:13 PST
[Mac] Graphical corruption in videos when enabling custom loading path
Attachments
Patch (9.79 KB, patch)
2016-02-09 13:39 PST, Jer Noble
no flags
Patch (2.12 KB, patch)
2016-02-10 13:23 PST, Jer Noble
achristensen: review+
jer.noble: commit-queue-
Jer Noble
Comment 1 2016-02-09 13:39:56 PST
WebKit Commit Bot
Comment 2 2016-02-09 16:16:00 PST
Comment on attachment 270949 [details] Patch Clearing flags on attachment: 270949 Committed r196345: <http://trac.webkit.org/changeset/196345>
WebKit Commit Bot
Comment 3 2016-02-09 16:16:03 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 4 2016-02-09 16:47:12 PST
It looks like this change has caused the following API test to fail: FAIL WebCoreNSURLSessionTest.BasicOperation /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebCore/WebCoreNSURLSession.mm:87 Value of: [data isEqualToData:directSubdata] Actual: false Expected: true /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebCore/WebCoreNSURLSession.mm:87 Value of: [data isEqualToData:directSubdata] Actual: false Expected: true <https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK2%20%28Tests%29/builds/3217/steps/run-api-tests/logs/stdio>
Jer Noble
Comment 5 2016-02-10 13:23:37 PST
Reopening to attach new patch.
Jer Noble
Comment 6 2016-02-10 13:23:38 PST
Jer Noble
Comment 7 2016-02-10 13:45:17 PST
Note You need to log in before you can comment on or make changes to this bug.